Refactor: swagger about Products
