# build/swagger.yaml
@@ -34,15 +34,15 @@ components:
       properties:
         name:
           type: string
-          description: 제품 이름
+          description: 상품 이름
           example: MagSafe형 iPhone 14 실리콘 케이스 - 카나리 옐로
         price:
           type: number
-          desc: 제품 가격
+          description: 상품 가격
           example: 69000
-        description:
+        desc:
           type: string
-          description: 제품 정보
+          description: 상품에 대한 상세 정보
           example: Apple이 디자인한 이 MagSafe형 실리콘 케이스는 iPhone 14에 멋을 한층 더하는 동시에 폰을 든든하게 보호해줍니다.
     replies:
       properties:
@@ -103,21 +103,27 @@ components:
   examples:
     getAllProducts:
       value:
-        message: successfully get all products from Redis
+        message: successfully get all products from DB
         products:
-          - product_id: 645c6e83b9e1ccb37c920ae7
+          - _id: 6492e367a5ec58c9d161e1db
+            name: 45mm 브라이트 오렌지 스포츠 밴드
+            price: 65000
+            desc: 스포츠 밴드는 특수 제작한 고탄성 불화탄성중합체로 만들어 튼튼하고 내구성이 뛰어나면서도 놀라우리만치 부드럽습니다. 부드러운 고밀도 소재의 밴드가 우아하게 손목을 감싸주어 피부에 닿는 느낌이 편안합니다. 또한 혁신적인 핀앤턱 잠금장치는 깔끔하게 떨어지는 착용감을 선사합니다.
+            createdAt: '2023-06-21T11:47:51.230Z'
+            updatedAt: '2023-06-21T11:47:51.230Z'
+            __v: 0
+          - _id: 649a91c8b20061abaf9e7df6
             name: iPad Pro 11
-            price: 1390000
-            description: |-
+            price: 1249000
+            desc: |-
               프로급 워크플로를 위한 막강한 성능과 온종일 가는 배터리 사용 시간을 구현하는 Apple M2 칩¹
               ProMotion, True Tone, P3의 넓은 색영역을 갖춘 27.9cm Liquid Retina 디스플레이각주²
               LiDAR 스캐너를 탑재한 프로급 카메라, 센터 스테이지 기술이 적용된 울트라 와이드 전면 카메라
               가장 빠른 Wi-Fi 연결성을 선사하는 Wi-Fi 6E 그리고 초고속 다운로드 및 고화질 스트리밍이 가능한 5G.³
               Apple Pencil(2세대),Magic Keyboard, Smart Keyboard Folio과 호환각주⁴
-          - product_id: 645b337dc24ebe7016fd2dfd
-            name: Apple Watch Ultra
-            price: 1149000
-            description: '동작 버튼을 갖추고 있으며 무게감, 견고함, 내부식성이 완벽한 조화를 이루는 초강력 49mm 티타늄 케이스 혹독한 조건에서도 보기 쉬운 역대 가장 크고 밝은 상시표시형 Retina 디스플레이 거리, 페이스, 이동 경로를 계산할 수 있도록 정확한 위치 정보를 제공하는 정밀한 이중 주파수 GPS 최대 36시간의¹ 배터리 사용 시간, 그리고 저전력 모드에서 최대 60시간²'
+            createdAt: '2023-06-27T07:37:44.464Z'
+            updatedAt: '2023-06-27T07:37:44.464Z'
+            __v: 0
     getProduct:
       value:
         message: successfully get product from DB
@@ -147,18 +153,15 @@ components:
           __v: 0
     updateProduct:
       value:
-        msg: successfully updated product by 645b337dc24ebe7016fd2dfd
+        msg: successfully updated product by 649a91c8b20061abaf9e7df6
         product:
-          _id: 645b337dc24ebe7016fd2dfd
-          name: test11111111111111111111111111111111
-          price: 1231231241241
-          desc: test11111111111111111111111111111111
-          createdAt: '2023-05-10T06:02:37.034Z'
-          updatedAt: '2023-05-12T04:16:43.624Z'
+          _id: 649a91c8b20061abaf9e7df6
+          name: update test
+          price: 1234556
+          desc: test1111111111111111111111111111
+          createdAt: '2023-06-27T07:37:44.464Z'
+          updatedAt: '2023-07-03T03:44:19.391Z'
           __v: 0
-    deleteAllProducts:
-      value:
-        message: successfully deleted all data in DB & Redis
     deleteProduct:
       value:
         message: successfully deleted data by 645dea5be6b8f6d7c770f3bf
@@ -304,7 +307,7 @@ components:
         message: successfully updated email confirm
   responses:
     successResponse:
-      description: successful request with no data
+      description: 클라이언트의 요청이 성공적으로 처리되었음을 나타내는 상태 코드입니다.
       content:
         application/json:
           schema:
@@ -312,9 +315,9 @@ components:
             example:
               status: 200
               success: true
-              message: message
-    No content:
-      description: 204
+              message: OK
+    NoContent:
+      description: '클라이언트의 요청이 성공적으로 처리되었지만, 응답 본문에 내용이 없음을 나타내는 상태 코드입니다.'
       content:
         application/json:
           schema:
@@ -324,60 +327,61 @@ components:
               success: true
               message: No content
     BadRequest:
-      description: 400
+      description: 클라이언트가 서버에 잘못된 요청을 보낸 경우 발생하는 오류입니다.
       content:
         application/json:
           schema:
             $ref: '#/components/schemas/Error'
           example:
             status: 400
-            success: true
-            message: 잘못된 요청
+            success: false
+            message: Bad Request
     Unauthorized:
-      description: 401
+      description: 클라이언트가 인증되지 않은 상태로 보호된 리소스에 접근하려고 할 때 발생하는 오류입니다.
       content:
         application/json:
           schema:
             $ref: '#/components/schemas/Error'
           example:
             status: 401
-            success: true
-            message: 인증되지 않음
+            success: false
+            message: Unauthorized
     Forbidden:
-      description: 403
+      description: 클라이언트가 요청한 리소스에 대한 접근 권한이 없을 때 발생하는 오류입니다.
       content:
         application/json:
           schema:
             $ref: '#/components/schemas/Error'
           example:
             status: 403
-            success: true
-            message: 접근 금지
-    Not found:
-      description: 404
+            success: false
+            message: Forbidden
+    NotFound:
+      description: 클라이언트가 요청한 리소스를 서버에서 찾을 수 없을 때 발생하는 오류입니다.
       content:
         application/json:
           schema:
             $ref: '#/components/schemas/Error'
           example:
             status: 404
-            success: true
-            message: 찾을 수 없음
+            success: false
+            message: Not Found
     InternalServerError:
-      description: 서버 에러
+      description: 서버 내부에서 예기치 않은 오류가 발생하여 클라이언트의 요청을 처리하지 못할 때 발생하는 상태 코드입니다.
       content:
         application/json:
           schema:
             $ref: '#/components/schemas/Error'
           example:
+            status: 500
             success: false
-            message: 서버 내부 오류
+            message: Internal Server Error
 paths:
   /products:
     get:
       tags:
         - Product
-      summary: 등록된 모든 제품 조회 - 관리자
+      summary: 모든 상품 조회
       consumes:
         - application/json
       produces:
@@ -391,14 +395,14 @@ paths:
               examples:
                 products:
                   $ref: '#/components/examples/getAllProducts'
-        '400':
-          $ref: '#/components/responses/BadRequest'
+        '204':
+          $ref: '#/components/responses/NoContent'
         '500':
           $ref: '#/components/responses/InternalServerError'
     post:
       tags:
         - Product
-      summary: 판매 제품 등록 - 판매자
+      summary: 판매 상품 등록
       consumes:
         - application/json
       produces:
@@ -425,32 +429,11 @@ paths:
           $ref: '#/components/responses/BadRequest'
         '500':
           $ref: '#/components/responses/InternalServerError'
-    delete:
-      tags:
-        - Product
-      summary: 등록된 모든 제품 삭제 - 판매자
-      consumes:
-        - application/json
-      produces:
-        - application/json
-      responses:
-        '200':
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/products'
-              examples:
-                deleteAllProducts:
-                  $ref: '#/components/examples/deleteAllProducts'
-        '400':
-          $ref: '#/components/responses/BadRequest'
-        '500':
-          $ref: '#/components/responses/InternalServerError'
   '/products/{id}':
     get:
       tags:
         - Product
-      summary: 제품의 상세 페이지 이동 - 모든 사용자
+      summary: 제품의 상세 페이지 이동
       consumes:
         - application/json
       produces:
@@ -466,14 +449,14 @@ paths:
               examples:
                 product:
                   $ref: '#/components/examples/getProduct'
-        '400':
-          $ref: '#/components/responses/BadRequest'
+        '404':
+          $ref: '#/components/responses/NotFound'
         '500':
           $ref: '#/components/responses/InternalServerError'
     put:
       tags:
         - Product
-      summary: 등록한 판매 제품 수정 - 판매자
+      summary: 판매중인 상품 정보 수정
       consumes:
         - application/json
       produces:
@@ -498,12 +481,14 @@ paths:
                   $ref: '#/components/examples/updateProduct'
         '400':
           $ref: '#/components/responses/BadRequest'
+        '404':
+          $ref: '#/components/responses/NotFound'
         '500':
           $ref: '#/components/responses/InternalServerError'
     delete:
       tags:
         - Product
-      summary: 특정 제품 삭제 - 판매자
+      summary: 판매 상품 삭제
       consumes:
         - application/json
       produces:
@@ -517,10 +502,10 @@ paths:
               schema:
                 $ref: '#/components/schemas/products'
               examples:
-                deleteAllProducts:
+                deleteProducts:
                   $ref: '#/components/examples/deleteProduct'
-        '400':
-          $ref: '#/components/responses/BadRequest'
+        '404':
+          $ref: '#/components/responses/NotFound'
         '500':
           $ref: '#/components/responses/InternalServerError'
     post:
